Changed the key to reference a configuration (from `start` to `shortDescription`)